[tool.poetry]
name = "data-managment"
version = "0.1.0"
description = ""
authors = ["Maxime Ben Hassen <maxime.benhassen@fedabian.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
